Updates to the site prior to adding main header image

--- a/index.html
+++ b/index.html
@@ -41,9 +41,13 @@
         
         <section class="main-content-container">
             <div class="main-content">
-                <div class="opening-intro">
-                    <h1 class="intro-heading">UK Property Stats</h1>
-                    <p class="intro-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, hic, doloribus. Laboriosam, recusandae enim aperiam velit, a veritatis molestiae placeat sed perspiciatis magnam nisi, est incidunt rem quas reprehenderit, veniam distinctio. Quaerat repudiandae earum voluptate minus, dolore, cumque quisquam ullam!</p>
+                <div class="opening-image">
+                    <div class="main-image-shade">
+                        <div class="opening-intro">
+                            <h1 class="intro-heading">UK Property Stats</h1>
+                            <p class="intro-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, hic, doloribus. Laboriosam, recusandae enim aperiam velit, a veritatis molestiae placeat sed perspiciatis magnam nisi, est incidunt rem quas reprehenderit, veniam distinctio. Quaerat repudiandae earum voluptate minus, dolore, cumque quisquam ullam!</p>
+                        </div>
+                    </div>
                 </div>
                 <div id="map"></div>
             </div>
