Top image added

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
                         </div>
                     </div>
                 </div>
-                <div id="map"></div>
+                <div class="site-info">
+                    <div id="map"></div>
+                </div>
             </div>
         </section>
         
