Data folder added. Line.js deleted and the line graphs added to graph.js file

--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
                         <button id="hide-button" class="btn btn-dark">Hide Charts</button>
                     </div>
                     
-                    <div id="price-section-title">
+                    <div class="chart-section-intro" id="price-section-title">
                         <h2>UK House Prices</h2>
                     </div>
-                    <div id="sales-section-title">
+                    <div class="chart-section-intro" id="sales-section-title">
                         <h2>UK House Sales</h2>
                     </div>
                         
