New functions.js file and data beginning to be moved.

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         <div id="house-sales-over-time"></div>
                     </div>
 
-                    <script src="assets/js/line.js"></script>
+                    <script src="assets/js/functions.js"></script>
                     <script src="assets/js/graph.js"></script>
                 </div>
             </div>
