updates to readme and css and html rechecked. Name of functions js file updated

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         <div id="house-sales-over-time"></div>
                     </div>
 
-                    <script src="assets/js/functions.js"></script>
+                    <script src="assets/js/averageFunctions.js"></script>
                     <script src="assets/js/graph.js"></script>
                 </div>
             </div>
@@ -160,8 +160,6 @@
 
         <script src="assets/js/maps.js"></script>
         <script src="assets/js/graph.js"></script>
-        <script src="assets/js/line.js"></script>
-        <script src="assets/js/line.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
         <script src="assets/js/graphButton.js"></script>
         <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPfTSNh8PlstFHl5SlqUrQKvQWVlN1MRQ&callback=initMap"></script>
