All complete barring the README file

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <div class="opening-text-container">
                         <div class="opening-intro">
                             <h1 class="intro-heading">UK Property Stats</h1>
-                            <p class="intro-paragraph">House Prices and sales have become a national obsession discussion over the last few years. This website gives you an overview into the numbers of house sales over the last few years and the prices at which they have been sold. Look at the map of the UK to find the location of the cities and the prices, and then have a look at the sales and price chart below.</p>
+                            <p class="intro-paragraph">House Prices and sales have become a national obsession over the last few years. This website gives you an overview into the numbers of house sales over the last year, and the prices at which they have been sold. Look at the map of the UK to find an overview of the sales and prices in different locations. Then view the sales and price charts below.</p>
                         </div>
                     </div>
                 </div>
@@ -73,7 +73,7 @@
 
                     <div class="section-intro chart-buttons-intro">
                         <h2 class="section-heading">House Prices and House Sales</h2>
-                        <p class="section-paragraph"><b>Click on the buttons below</b> to reveal charts regarding the number of house sales or to compare house sales in cities near you, and to compare those with the rest of the UK!</p>
+                        <p class="section-paragraph"><b>Click on the buttons below</b> to reveal charts for house sales or prices. See house sales and prices in cities near you. Then compare those with the rest of the UK!</p>
                     </div>
                     
                     <div class="chart-toggle-buttons">
@@ -92,7 +92,7 @@
                     <div class="price-charts">
                         <div class="chart-intro">
                             <h3 class="chart-header">Average House Price Per Area</h3>
-                            <p class="chart-paragraph">The following bar chart shows the average house prices in different cities of the UK. <b>Click on one of the city bars</b> and see how it affects the <b>bar chart below</b>, which shows the difference in house prices for particular house types. You can click on more than one city.</p>
+                            <p class="chart-paragraph">The following bar charts shows the average house prices in different cities of the UK. <b>Click on the bars of the cities</b>. See how it affects the house type bar chart. This shows the difference in house prices for particular house types. <b>Click on the house type bars</b> and see how this affects the city data.</p>
                         </div>
                         <div id="average-house-price-bar-chart"></div>
                         <div id="house-type-price-bar-chart"></div>
@@ -106,13 +106,13 @@
                     <div class="sales-charts">
                         <div class="chart-intro">
                             <h3 class="chart-header">Total Number of Homes sold per Area</h3>
-                            <p class="chart-paragraph">The following bar chart shows the number of house prices in different cities of the UK. <b>Click</b> on one of the city bars below, and see how this number is divided between the different house types in the bar.</p>
+                            <p class="chart-paragraph">The following bar and pie chart shows the number of house sales in different cities of the UK. <b>Click on the bars of the cities</b>. See how this affects the pie chart which shows how these sales are split among the different house types. You can also <b>click on a section of the pie chart</b> to see the number of sales for this house type, shown the city bar chart. </p>
                         </div>
                         <div id="house-sales-bar-chart"></div>
                         <div id="house-type-pie-chart"></div>
                         <div class="chart-intro">
                             <h3 class="chart-header">Number of House Sales per Year</h3>
-                            <p class="chart-paragraph">This line graph shows the number of yearly house sales since 2006. </p>
+                            <p class="chart-paragraph">There have been changes in the number of houses sold in the UK over last few years. This line graph shows the number of yearly house sales since 2006. </p>
                         </div>
                         <div id="house-sales-over-time"></div>
                     </div>
