--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <div class="site-info">
                     <div class="section-intro">
                         <h2 class="section-heading">Map</h2>
-                        <p class="section-paragraph"><b>Click</b> on the cities on the map to see the average house prices in these areas.</p>
+                        <p class="section-paragraph"><b>Click</b> on the city icons to see the average house prices in these areas.</p>
                     </div>
                     <div id="map"></div>
                     <a id=charts></a>
