js files adjusted to remove console errors, especially with the email. index.html changed to remove post method.

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     <div class="contact-section">
                         <h2 class="footer-header">Contact</h2>
                         <p>Fill in form below to be kept up to date with latest developments.</p>
-                        <form onsubmit="return sendMail(this);" method="POST">
+                        <form onsubmit="return sendMail(this);">
                             <input type="text" name="firstname" id="firstname" class="footer-input-text-box" placeholder="First Name" required>
                             <input type="text" name="lastname" id="lastname" class="footer-input-text-box" placeholder="Last Name" required>
                             <input type="email" name="emailaddress" id="emailaddress" class="footer-input-text-box" placeholder="e-mail Address" required>
